css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
    font-family: 'Poppins', sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

header {
    background-color: #fff;
    width: 100%;
    position: fixed;
    z-index: 999;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 200px;
    opacity: calc(0.95);
}

.logo{
    text-decoration: none;
    color: #6C63FF;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 1.8em;

}

.navigation a{
    color: #6C63FF;
    text-decoration: none;
    font-size: 1.1em;
    font-weight: 500;
    padding-left: 30px;

}

.navigation a:hover{
    color: #601cfc;
}

section{
    padding: 100px 200px;
}

.main{
    width: 100%;
    min-height: 100vh;
    display: flex;
    align-items: center;
    background: url("../images/undraw_programming_re_kg9v.svg") no-repeat ;
    background-size: 700px;  
    background-position: right;
}

.main h2{
    color: #fff;
    font-size: 1.4em;
    font-weight: 500;

}

.first{
    font-size: 1.4em;
    font-weight: 500;
    font-display:unset;
    background-color: #453cec;
    padding: 10px 30px;
    border-radius:20px;
    text-align: center;
    
    

    
}

.main h2 span{
    background: #453cec;
    display: inline-block;
    margin-top: 10px;
    color:#fff;
    padding: 5px 10px;
    border-radius: 20px;
    font-size: 2em;
    font-weight: 600;
    

}

.main h3{
    background-color:#453cec;
    color: #fff;
    font-size: 1.5em;
    font-weight: 600;
    letter-spacing: 1px;
    margin-top: 10px;
    margin-bottom: 30px;
    padding: 12px;
    border-radius: 15px;
    text-align: center;
    
    
}
.main-btn{
    color: #fff;
    background-color: #453cec;
    text-decoration: none;
    font-size: 1.0em;
    font-weight: 550;
    display: inline-block;
    padding: 0.9375em 2.1875em;
    letter-spacing: 1px;
    border-radius: 15px;
    margin-bottom: 40px;
    transition: 0.7s ease;

}

.main-btn:hover {
    background-color: #0a49f6;
    transform: scale(1.1);
}

.main .social-icons {
    background-color: #453cec;
    text-align: center;
    border-radius: 10px;
    
}


.social-icons a {
    padding: 5px 20px;
    color:#fff;
    font-size: 1.5em;
    
}

.title{
    display: flex;
    justify-content: center;
    color: #6C63FF;
    font-size: 2em;
    font-weight: 700;
    margin-bottom: 30px;

}

.content{
    display: flex;
    text-align: center;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.card{
    background-color: #fff;
    width: 18.25em;
    box-shadow: 0 5px 25px rgba(1 1 1 /15%);
    border-radius: 10px;
    padding: 25px;
    margin: 15px;
    transition: 0.7s ease;
    
}

.card:hover {
    transform: scale(1.1);

}

.card .icon{
    color: #6C63FF;
    font-size: 5em;

}
.info{
    text-align: center;

}

.info h3{
    color: #6C63FF;
    font-size: 1.1em;
    font-weight: 600;
    margin: 10px;

}

.projects {
    background-color: rgb(32, 13, 205);
}
.projects .title {
    color: #fff;
    display: flex;
    justify-content: center;
    font-size: 2em;
    font-weight: 700;
    margin-bottom: 30px;
}


.projects .content{
    margin-top: 30px;

}
.project-card {
    background-color: #fff;
    border: 1px solid #FFF;
    min-height: 12em;
    width: 18em;
    overflow: hidden;
    border-radius: 10px;
    margin: 20px;
    transition: 0.7s ease;


}

.project-card:hover{
    transform: scale(1.1);

}

.project-card:hover .project-image {
    opacity: 0.9;
    
}

.project-image img{
    width: 100%;
    height: 30vh;
}

.project-info {
    padding: 1em;
}

.project-category {
    font-size: 0.8em;
    color: #000;

}

.project-title {
    display: flex;
    justify-content: space-between;
    text-transform: uppercase;
    font-weight: 700;
    margin-top: 10px;
    

}
.more-details{
    text-decoration: none;
    color:#601cfc ;
}

.more-details:hover {
    color: rgb(32, 13, 205);
}

.contact .icon {
    font-size: 4em;

}

.contact .info h3{
    color: #000;
}
.contact .info p {
    font-size: 1em;
}

.footer {
    background-color: rgb(14, 5, 96);
    color: #FFF;
    padding: 1.5em;
    display:flex ;
    justify-content: space-between;
}

.footer-title {
    font-size: 1.1em;
    font-weight: 550;
}

.footer-title span {
    color: #f0f0f0;
}

.footer .social-icons a {
    color: #fff;
    padding: 0 11px 0 0;
}

@media (max-width:1310px){
    .main{
        background-size: 700px;
    }
}
@media (max-width:1200px){
    .main{
        background-size: 600px;
    }
}
@media (max-width: 1100px) {
    .main{
        background-size: 480px;
    }
}

@media (max-width:1023px){
    header {
        padding: 12px 20px; 
    }
    .navigation a {
        padding-left: 10px;
    }
    .title{
        font-size: 1.5em;
    }
    section{
        padding: 80px 20px;
    }
    .main{
        background-size: 600px;
    }
    
    .main-content h2{
        font-size: 0.9em;
    }

    .main-content h3{
        font-size: 1.5em;
    }
    .content{
        flex-direction: column;
        align-items: center;
    }
    
}
@media (max-width:950px){
    .main{
        background-size: 550px;
    }
}
@media (max-width:900px){
    .main{
        background-size: 400px;
    }
}
@media (max-width:850px){
    .main{
        background-size: 350px;
    }
}

@media (max-width:700px){
    body{
        font-size: 12px;
    }
    .main-content h2 {
        font-size: 0.7em;
    }
    .main{
        background-size: 300px;
    }

    .main-content h3{
        font-size: 1.2em;
    }
}

@media (max-width:570px){
        .main{
            flex-direction: column;
            align-items: center;
            display: flex;
            
            
            background-position:bottom;
            background-size: 250px;
        }
        body{
            font-size: 12px;
            
        }
        
    }
    

@media (max-width:325px){

    .main{
        flex-direction: column;
        align-items: center;
        
        background-position: bottom;
    }
    body{
        font-size: 10px;
        
    }
}

